--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-menubar": "^1.1.16",
@@ -23,6 +24,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@react-hook/media-query": "^1.1.1",
+    "@reduxjs/toolkit": "^2.11.2",
+    "@types/js-cookie": "^3.0.6",
     "antd": "^5.20.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -40,7 +43,9 @@
     "react-icons": "^5.3.0",
     "react-lucid": "^0.0.1",
     "react-quill": "^2.0.0",
+    "react-redux": "^9.2.0",
     "recharts": "^2.15.4",
+    "redux-persist": "^6.0.0",
     "sharp": "^0.33.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^3.0.1",
