added footer content

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_BASE_URL=http://10.10.10.78:6104/api/v1
+NEXT_PUBLIC_BASE_URL=https://api.freedompathplanning.com/api/v1
+# NEXT_PUBLIC_BASE_URL=http://10.10.10.78:6104/api/v1
